--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,6 @@
 * {
     margin: 0;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 header {
@@ -9,3 +10,26 @@ header {
    color: bisque;
 margin-bottom: 1em;
 }
+
+#weatherCard {
+display: flex; 
+flex-direction: column;
+align-content: flex-end;
+align-items: center;
+
+background-color: #9198e5;
+width: 45vw;
+float:right;
+margin-right: 6em;
+}
+
+.searchHistoryBtn {
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    margin-left: 2em;
+    padding: .2em;
+    margin-top: 1em;
+    margin-bottom: 1em;
+}
+
